SSA/Projects/InstCombine/tests/logs/proofs/g2005h06h16hRangeCrash_proof.txt
⚠ [90/2524] Replayed Mathlib.Control.Combinators
warning: ././.lake/packages/mathlib/././Mathlib/Control/Combinators.lean:35:4: `Monad.mapM'` is missing a doc-string, please add one.
Declarations whose name ends with a `'` are expected to contain an explanation for the presence of a `'` in their doc-string. This may consist of discussion of the difference relative to the unprimed version, or an explanation as to why no better naming scheme is possible.
note: this linter can be disabled with `set_option linter.docPrime false`
warning: ././.lake/packages/mathlib/././Mathlib/Control/Combinators.lean:57:4: `Monad.sequence'` is missing a doc-string, please add one.
Declarations whose name ends with a `'` are expected to contain an explanation for the presence of a `'` in their doc-string. This may consist of discussion of the difference relative to the unprimed version, or an explanation as to why no better naming scheme is possible.
note: this linter can be disabled with `set_option linter.docPrime false`
⚠ [834/2524] Replayed SSA.Experimental.Bits.AutoStructs.ForLean
warning: ././././SSA/Experimental/Bits/AutoStructs/ForLean.lean:26:8: declaration uses 'sorry'
warning: ././././SSA/Experimental/Bits/AutoStructs/ForLean.lean:29:8: declaration uses 'sorry'
warning: ././././SSA/Experimental/Bits/AutoStructs/ForLean.lean:31:8: declaration uses 'sorry'
warning: ././././SSA/Experimental/Bits/AutoStructs/ForLean.lean:33:8: declaration uses 'sorry'
warning: ././././SSA/Experimental/Bits/AutoStructs/ForLean.lean:36:8: declaration uses 'sorry'
warning: ././././SSA/Experimental/Bits/AutoStructs/ForLean.lean:38:8: declaration uses 'sorry'
warning: ././././SSA/Experimental/Bits/AutoStructs/ForLean.lean:40:8: declaration uses 'sorry'
warning: ././././SSA/Experimental/Bits/AutoStructs/ForLean.lean:43:8: declaration uses 'sorry'
warning: ././././SSA/Experimental/Bits/AutoStructs/ForLean.lean:54:8: declaration uses 'sorry'
warning: ././././SSA/Experimental/Bits/AutoStructs/ForLean.lean:58:8: declaration uses 'sorry'
✔ [2492/2524] Built SSA.Core.MLIRSyntax.AST
✔ [2493/2524] Built SSA.Core.ErasedContext
✖ [2494/2524] Building SSA.Core.MLIRSyntax.Transform.TransformError
trace: .> LEAN_PATH=././.lake/packages/batteries/.lake/build/lib:././.lake/packages/Qq/.lake/build/lib:././.lake/packages/aesop/.lake/build/lib:././.lake/packages/proofwidgets/.lake/build/lib:././.lake/packages/importGraph/.lake/build/lib:././.lake/packages/LeanSearchClient/.lake/build/lib:././.lake/packages/plausible/.lake/build/lib:././.lake/packages/mathlib/.lake/build/lib:././.lake/packages/Cli/.lake/build/lib:././.lake/packages/leanwuzla/.lake/build/lib:././.lake/build/lib LD_LIBRARY_PATH= /home/tobiascgrosser/.elan/toolchains/leanprover--lean4---nightly-2024-11-08/bin/lean ././././SSA/Core/MLIRSyntax/Transform/TransformError.lean -R ./././. -o ././.lake/build/lib/SSA/Core/MLIRSyntax/Transform/TransformError.olean -i ././.lake/build/lib/SSA/Core/MLIRSyntax/Transform/TransformError.ilean -c ././.lake/build/ir/SSA/Core/MLIRSyntax/Transform/TransformError.c --json
error: ././././SSA/Core/MLIRSyntax/Transform/TransformError.lean:4:0: failed to read file '././.lake/build/lib/SSA/Core/MLIRSyntax/AST.olean', invalid header
error: Lean exited with code 1
✖ [2495/2524] Building SSA.Core.Framework
trace: .> LEAN_PATH=././.lake/packages/batteries/.lake/build/lib:././.lake/packages/Qq/.lake/build/lib:././.lake/packages/aesop/.lake/build/lib:././.lake/packages/proofwidgets/.lake/build/lib:././.lake/packages/importGraph/.lake/build/lib:././.lake/packages/LeanSearchClient/.lake/build/lib:././.lake/packages/plausible/.lake/build/lib:././.lake/packages/mathlib/.lake/build/lib:././.lake/packages/Cli/.lake/build/lib:././.lake/packages/leanwuzla/.lake/build/lib:././.lake/build/lib LD_LIBRARY_PATH= /home/tobiascgrosser/.elan/toolchains/leanprover--lean4---nightly-2024-11-08/bin/lean ././././SSA/Core/Framework.lean -R ./././. -o ././.lake/build/lib/SSA/Core/Framework.olean -i ././.lake/build/lib/SSA/Core/Framework.ilean -c ././.lake/build/ir/SSA/Core/Framework.c --json
error: ././././SSA/Core/Framework.lean:6:0: failed to read file '././.lake/build/lib/SSA/Core/ErasedContext.olean', invalid header
error: Lean exited with code 1
✖ [2500/2524] Building SSA.Core.MLIRSyntax.GenericParser
trace: .> LEAN_PATH=././.lake/packages/batteries/.lake/build/lib:././.lake/packages/Qq/.lake/build/lib:././.lake/packages/aesop/.lake/build/lib:././.lake/packages/proofwidgets/.lake/build/lib:././.lake/packages/importGraph/.lake/build/lib:././.lake/packages/LeanSearchClient/.lake/build/lib:././.lake/packages/plausible/.lake/build/lib:././.lake/packages/mathlib/.lake/build/lib:././.lake/packages/Cli/.lake/build/lib:././.lake/packages/leanwuzla/.lake/build/lib:././.lake/build/lib LD_LIBRARY_PATH= /home/tobiascgrosser/.elan/toolchains/leanprover--lean4---nightly-2024-11-08/bin/lean ././././SSA/Core/MLIRSyntax/GenericParser.lean -R ./././. -o ././.lake/build/lib/SSA/Core/MLIRSyntax/GenericParser.olean -i ././.lake/build/lib/SSA/Core/MLIRSyntax/GenericParser.ilean -c ././.lake/build/ir/SSA/Core/MLIRSyntax/GenericParser.c --json
error: ././././SSA/Core/MLIRSyntax/GenericParser.lean:4:0: failed to read file '././.lake/build/lib/SSA/Core/MLIRSyntax/AST.olean', invalid header
error: Lean exited with code 1
✔ [2509/2524] Built SSA.Projects.InstCombine.ForLean
✖ [2510/2524] Building SSA.Experimental.Bits.AutoStructs.Basic
trace: .> LEAN_PATH=././.lake/packages/batteries/.lake/build/lib:././.lake/packages/Qq/.lake/build/lib:././.lake/packages/aesop/.lake/build/lib:././.lake/packages/proofwidgets/.lake/build/lib:././.lake/packages/importGraph/.lake/build/lib:././.lake/packages/LeanSearchClient/.lake/build/lib:././.lake/packages/plausible/.lake/build/lib:././.lake/packages/mathlib/.lake/build/lib:././.lake/packages/Cli/.lake/build/lib:././.lake/packages/leanwuzla/.lake/build/lib:././.lake/build/lib LD_LIBRARY_PATH= /home/tobiascgrosser/.elan/toolchains/leanprover--lean4---nightly-2024-11-08/bin/lean ././././SSA/Experimental/Bits/AutoStructs/Basic.lean -R ./././. -o ././.lake/build/lib/SSA/Experimental/Bits/AutoStructs/Basic.olean -i ././.lake/build/lib/SSA/Experimental/Bits/AutoStructs/Basic.ilean -c ././.lake/build/ir/SSA/Experimental/Bits/AutoStructs/Basic.c --json
info: stderr:
failed to write '././.lake/build/lib/SSA/Experimental/Bits/AutoStructs/Basic.olean': 2 No such file or directory
error: Lean exited with code 1
✔ [2512/2524] Built SSA.Experimental.Bits.Fast.BitStream
✔ [2513/2524] Built SSA.Experimental.Bits.Fast.Defs
✖ [2515/2524] Building SSA.Experimental.Bits.AutoStructs.Defs
trace: .> LEAN_PATH=././.lake/packages/batteries/.lake/build/lib:././.lake/packages/Qq/.lake/build/lib:././.lake/packages/aesop/.lake/build/lib:././.lake/packages/proofwidgets/.lake/build/lib:././.lake/packages/importGraph/.lake/build/lib:././.lake/packages/LeanSearchClient/.lake/build/lib:././.lake/packages/plausible/.lake/build/lib:././.lake/packages/mathlib/.lake/build/lib:././.lake/packages/Cli/.lake/build/lib:././.lake/packages/leanwuzla/.lake/build/lib:././.lake/build/lib LD_LIBRARY_PATH= /home/tobiascgrosser/.elan/toolchains/leanprover--lean4---nightly-2024-11-08/bin/lean ././././SSA/Experimental/Bits/AutoStructs/Defs.lean -R ./././. -o ././.lake/build/lib/SSA/Experimental/Bits/AutoStructs/Defs.olean -i ././.lake/build/lib/SSA/Experimental/Bits/AutoStructs/Defs.ilean -c ././.lake/build/ir/SSA/Experimental/Bits/AutoStructs/Defs.c --json
info: stderr:
failed to write '././.lake/build/lib/SSA/Experimental/Bits/AutoStructs/Defs.olean': 2 No such file or directory
error: Lean exited with code 1
✖ [2516/2524] Building SSA.Experimental.Bits.Fast.Circuit
trace: .> LEAN_PATH=././.lake/packages/batteries/.lake/build/lib:././.lake/packages/Qq/.lake/build/lib:././.lake/packages/aesop/.lake/build/lib:././.lake/packages/proofwidgets/.lake/build/lib:././.lake/packages/importGraph/.lake/build/lib:././.lake/packages/LeanSearchClient/.lake/build/lib:././.lake/packages/plausible/.lake/build/lib:././.lake/packages/mathlib/.lake/build/lib:././.lake/packages/Cli/.lake/build/lib:././.lake/packages/leanwuzla/.lake/build/lib:././.lake/build/lib LD_LIBRARY_PATH= /home/tobiascgrosser/.elan/toolchains/leanprover--lean4---nightly-2024-11-08/bin/lean ././././SSA/Experimental/Bits/Fast/Circuit.lean -R ./././. -o ././.lake/build/lib/SSA/Experimental/Bits/Fast/Circuit.olean -i ././.lake/build/lib/SSA/Experimental/Bits/Fast/Circuit.ilean -c ././.lake/build/ir/SSA/Experimental/Bits/Fast/Circuit.c --json
info: stderr:
failed to write '././.lake/build/lib/SSA/Experimental/Bits/Fast/Circuit.olean': 2 No such file or directory
error: Lean exited with code 1
Some required builds logged failures:
- SSA.Core.MLIRSyntax.Transform.TransformError
- SSA.Core.Framework
- SSA.Core.MLIRSyntax.GenericParser
- SSA.Experimental.Bits.AutoStructs.Basic
- SSA.Experimental.Bits.AutoStructs.Defs
- SSA.Experimental.Bits.Fast.Circuit
error: build failed
